# Board

./: .gitignore  ORIGINAL_REQUEST.md  PROJECT.md  README.md  TEST_INFRA.md  TEST_READY.md  package-lock.json  package.json  vite.config.ts
.agents/auditor_m2_canvas/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/auditor_m2_canvas_gen2/: BRIEFING.md  ORIGINAL_REQUEST.md  progress.md
.agents/challenger_m2_canvas_1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/challenger_m2_canvas_1_gen2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/challenger_m2_canvas_2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/challenger_m2_canvas_2_gen2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/explorer_m2_remediation/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/orchestrator/: BRIEFING.md  ORIGINAL_REQUEST.md  plan.md  progress.md
.agents/reviewer_m2_canvas_1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/reviewer_m2_canvas_1_gen2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/reviewer_m2_canvas_2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/reviewer_m2_canvas_2_gen2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  (+1 more)
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  main.rs  sandbox.rs
sync-server/: package-lock.json  package.json
tests/: package-lock.json  package.json  run_tests.sh  tsconfig.json  vitest.config.ts
(+75 files in other folders)
