[package]
name = "devboard"
version = "0.1.0"
description = "DevBoard Tauri Backend"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5" }

[dependencies]
tauri = { version = "1.6", features = [ "api-all" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"

[features]
custom-protocol = ["tauri/custom-protocol"]
